--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,4 +4,7 @@
 @import 'slick';
 @import 'slick-theme';
 @import 'header';
+@import 'top-screen';
+@import 'service';
 @import 'footer';
+@import 'media';
