--- a/css/style.css
+++ b/css/style.css
@@ -91,44 +91,67 @@ input::-ms-clear {
 END RESETT CSS
 ****************/
 @font-face {
-  font-family: "PTSans";
-  src: url("../font/PTSansRegular.woff") format("woff");
+  font-family: "Montserrat";
+  src: url("../font/Montserrat-Black.woff") format("woff");
+  font-style: normal;
+  font-weight: 900; }
+@font-face {
+  font-family: "Montserrat";
+  src: url("../font/Montserrat-ExtraBold.woff") format("woff");
+  font-style: normal;
+  font-weight: 800; }
+@font-face {
+  font-family: "Montserrat";
+  src: url("../font/Montserrat-Black.woff") format("woff");
+  font-style: normal;
+  font-weight: 700; }
+@font-face {
+  font-family: "Montserrat";
+  src: url("../font/Montserrat-Medium.woff") format("woff");
+  font-style: normal;
+  font-weight: 500; }
+@font-face {
+  font-family: "Montserrat";
+  src: url("../font/Montserrat-Regular.woff") format("woff");
   font-style: normal;
   font-weight: 400; }
 @font-face {
-  font-family: "PTSans";
-  src: url("../font/PTSansBold.woff") format("woff");
+  font-family: "Montserrat";
+  src: url("../font/Montserrat-Thin.woff") format("woff");
   font-style: normal;
-  font-weight: 700; }
+  font-weight: 300; }
+:root {
+  --pink: #b81678;
+  --red: #e00044;
+  --blue: #0169dd;
+  --yellow: #f9c407;
+  --black: #021627;
+  --green: #41ebd4;
+  --grey: #e5e5e5; }
+
 html, body {
   min-height: 100%; }
 
 html {
-  font-size: 10px; }
+  font-size: 16px; }
+
+body {
+  font-family: "Montserrat", sans-serif;
+  background-color: #fff; }
 
 a {
+  color: #000;
   -webkit-transition: all .2s;
   transition: all .2s; }
 
 .wrapper {
-  height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column; }
+  overflow-x: hidden; }
 
-.main {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 0 auto;
-          flex: 1 0 auto; }
-
-.footer {
-  -webkit-box-flex: 0;
-      -ms-flex: 0 0 auto;
-          flex: 0 0 auto; }
+.container {
+  width: 100%;
+  max-width: 1500px;
+  padding: 0 20px;
+  margin: 0 auto; }
 
 .flex {
   display: -moz-flex;
@@ -149,6 +172,69 @@ a {
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
     justify-content: space-between; }
+  .flex--column {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column; }
+
+.btn {
+  font-size: 1.125em;
+  border-radius: 35px;
+  padding: 1.388em 2.222em; }
+  .btn--pink {
+    background: var(--pink);
+    -webkit-box-shadow: 0 26px 51px rgba(184, 22, 120, 0.75);
+            box-shadow: 0 26px 51px rgba(184, 22, 120, 0.75);
+    color: #fff; }
+    .btn--pink:hover {
+      -webkit-transform: translateY(-3px);
+              transform: translateY(-3px);
+      -webkit-box-shadow: 0 20px 31px rgba(184, 22, 120, 0.85);
+              box-shadow: 0 20px 31px rgba(184, 22, 120, 0.85); }
+    .btn--pink:active {
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
+      -webkit-box-shadow: 0 10px 31px rgba(184, 22, 120, 0.85);
+              box-shadow: 0 10px 31px rgba(184, 22, 120, 0.85); }
+
+.pink {
+  color: var(--pink); }
+
+.yellow {
+  color: var(--yellow); }
+
+.blue {
+  color: var(--blue); }
+
+.black {
+  color: var(--black); }
+
+.red {
+  color: var(--red); }
+
+.title h2 {
+  font-size: 4.375rem;
+  font-weight: 700;
+  padding: 2em 0 2em .75em;
+  position: relative; }
+  .title h2::before {
+    content: '';
+    width: 5.6142em;
+    height: 4.6571em;
+    background: transparent url("../img/green-shape.png") left top no-repeat;
+    background-size: contain;
+    position: absolute;
+    left: 0;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+            transform: translateY(-50%); }
+  .title h2 .title__text {
+    position: relative;
+    z-index: 2; }
+  .title h2 .white {
+    color: #fff;
+    padding-right: .2em; }
 
 /* Firefox 19+ */
 /* Firefox 18- */
@@ -358,6 +444,294 @@ a {
       opacity: 0.75; }
 
 /*Header*/
+.header {
+  width: 100%;
+  max-width: 1640px;
+  padding: 40px 20px 60px;
+  margin: 0 auto; }
+
+.logo img {
+  width: 7.5em; }
+
+.header-nav {
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end; }
+
+.header__phones {
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  margin-bottom: 2em; }
+  .header__phones a {
+    display: inline-block;
+    text-decoration: underline;
+    font-size: .9375em;
+    letter-spacing: 0.38px; }
+    .header__phones a:not(:first-child) {
+      margin-left: 3em; }
+    .header__phones a:hover {
+      color: var(--pink);
+      text-decoration: none; }
+
+.menu {
+  margin-right: 3em; }
+  .menu li {
+    font-size: .9375em;
+    letter-spacing: 0.75px; }
+    .menu li a {
+      display: block;
+      padding: 1em 3em;
+      border-radius: 30px; }
+      .menu li a:hover {
+        background-color: var(--pink);
+        color: #fff;
+        -webkit-box-shadow: 0 20px 31px rgba(184, 22, 120, 0.55);
+                box-shadow: 0 20px 31px rgba(184, 22, 120, 0.55); }
+      .menu li a:active {
+        -webkit-box-shadow: 0 10px 31px rgba(184, 22, 120, 0.75);
+                box-shadow: 0 10px 31px rgba(184, 22, 120, 0.75); }
+
+.mobile-btn {
+  width: 25px;
+  display: none; }
+  .mobile-btn span {
+    display: block;
+    height: 2px;
+    background-color: var(--pink);
+    border-radius: 5px; }
+    .mobile-btn span:not(:last-child) {
+      margin-bottom: 5px; }
+    .mobile-btn span:nth-child(2) {
+      width: 75%;
+      background-color: var(--yellow); }
+
+.close {
+  width: 30px;
+  height: 30px;
+  background: url("../img/icons/close.png") 0 0 no-repeat;
+  background-size: contain;
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  z-index: 2; }
+
+.mobile-menu {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: #fff;
+  padding-top: 40px;
+  -webkit-transform: translateX(-110%);
+          transform: translateX(-110%);
+  visibility: hidden;
+  -webkit-transition: -webkit-transform .1s;
+  transition: -webkit-transform .1s;
+  transition: transform .1s;
+  transition: transform .1s, -webkit-transform .1s;
+  z-index: 10; }
+  .mobile-menu.active {
+    visibility: visible;
+    -webkit-transform: translateX(0);
+            transform: translateX(0); }
+
+/*top-screen*/
+.top-screen {
+  position: relative;
+  padding: 9.375em 0 12.5em; }
+
+.top-screen-img {
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 81.25em; }
+
+.top-screen__title h1 {
+  font-size: 7.5rem;
+  font-weight: 700;
+  line-height: .85;
+  margin-bottom: .3em; }
+  .top-screen__title h1 span {
+    display: block; }
+    .top-screen__title h1 span:first-letter {
+      color: var(--pink); }
+.top-screen__title p {
+  font-size: 1.25em;
+  line-height: 1.65;
+  max-width: 40em; }
+
+/*service*/
+.service {
+  padding-top: 8.75em;
+  position: relative; }
+  .service .title h2::before {
+    background-image: url("../img/green-shape_opacity.png"); }
+
+.service-img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 60em;
+  z-index: -1; }
+
+.service-list {
+  margin: 0 -5em; }
+  .service-list li {
+    width: 33.3333%;
+    padding: 0 5em;
+    margin-bottom: 2em; }
+
+.service__img {
+  height: 25em;
+  margin-bottom: 1.25em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end; }
+  .service__img img {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: contain;
+       object-fit: contain; }
+
+.service__descr {
+  text-align: center; }
+  .service__descr h3 {
+    font-size: 1.75em;
+    font-weight: 700;
+    margin-bottom: .5em; }
+  .service__descr p {
+    line-height: 1.3; }
+
 /*Footer*/
+/*media*/
+@media (max-width: 1500px) {
+  html {
+    font-size: .9vw; }
+
+  .top-screen-img {
+    height: 52em; }
+
+  .service-img {
+    height: 45em; } }
+/*1500*/
+@media (max-width: 1366px) {
+  html {
+    font-size: 1.1vw; }
+
+  .menu li {
+    font-size: 1em; } }
+/*1366*/
+@media (max-width: 768px) {
+  html {
+    font-size: 1.3vw; }
+
+  .desctop {
+    display: none !important; }
+
+  .btn {
+    font-size: 15px;
+    padding: 1em 2em; }
+
+  .header__phones a {
+    font-size: 14px; }
+
+  .header {
+    padding: 20px; }
+
+  .top-screen-img {
+    height: 39em; }
+
+  .top-screen__title p {
+    font-size: 1.7em; }
+
+  .service__descr p {
+    font-size: 1.3rem; } }
+/*768*/
+@media (max-width: 480px) {
+  .header-nav .btn {
+    font-size: 13px; }
+    .header-nav .btn span {
+      display: none; }
+
+  .logo img {
+    width: 50px; }
+
+  .mobile-btn {
+    display: block;
+    margin-right: 30px; }
+
+  .mobile-menu {
+    display: block; }
+
+  .menu {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    margin-right: 0;
+    margin-bottom: 40px; }
+    .menu li {
+      font-size: 16px;
+      padding: 0;
+      width: 100%; }
+      .menu li a {
+        display: block;
+        border-radius: 0;
+        padding: 1em 2em; }
+        .menu li a:active {
+          background-color: var(--pink);
+          color: #fff; }
+
+  .header__phones {
+    padding: 0 32px; }
+    .header__phones a {
+      display: block;
+      font-size: 24px;
+      margin-left: 0 !important;
+      margin-bottom: 15px;
+      text-decoration: none; }
+
+  .top-screen__title p {
+    font-size: 2em; }
+    .top-screen__title p br {
+      display: none; }
+
+  .title h2 {
+    font-size: 6.5rem; }
+
+  .service-list li {
+    width: 50%; }
+
+  .service__img {
+    margin-bottom: 15px; }
+
+  .service__descr h3 {
+    font-size: 2.7rem; }
+  .service__descr p {
+    font-size: 1.8rem; } }
+/*480*/
+@media (max-width: 360px) {
+  .top-screen__title p {
+    font-size: 2.4em; }
+
+  .service-list li {
+    width: 100%; }
+
+  .service__img {
+    height: 40em; }
+
+  .service__descr h3 {
+    font-size: 4rem; }
+  .service__descr p {
+    font-size: 3rem; } }
 
 /*# sourceMappingURL=style.css.map */
