--- a/css/style.css
+++ b/css/style.css
@@ -124,6 +124,7 @@ END RESETT CSS
   --pink: #b81678;
   --red: #e00044;
   --blue: #0169dd;
+  --birusa: #43999c;
   --yellow: #f9c407;
   --black: #021627;
   --green: #41ebd4;
@@ -138,6 +139,9 @@ html {
 body {
   font-family: "Montserrat", sans-serif;
   background-color: #fff; }
+
+img {
+  max-width: 100%; }
 
 a {
   color: #000;
@@ -235,6 +239,15 @@ a {
   .title h2 .white {
     color: #fff;
     padding-right: .2em; }
+.title--right {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end; }
+  .title--right h2::before {
+    background-image: url("../img/red-shape_title.png"); }
 
 /* Firefox 19+ */
 /* Firefox 18- */
@@ -608,6 +621,117 @@ a {
   .service__descr p {
     line-height: 1.3; }
 
+/*features*/
+.features {
+  margin-top: -5em;
+  padding: 7.5em 0 12.5em;
+  position: relative; }
+  .features::before, .features::after {
+    content: '';
+    width: 60%;
+    height: 30%;
+    background: transparent url("../img/dots-right.png") left top no-repeat;
+    background-size: contain;
+    position: absolute; }
+  .features::before {
+    left: 0;
+    top: 12em; }
+  .features::after {
+    right: 0;
+    bottom: 3em;
+    background-position: 100% 0; }
+  .features .container {
+    position: relative;
+    z-index: 2; }
+  .features .mark {
+    position: absolute;
+    left: 3em;
+    top: 8em;
+    width: 25em; }
+
+.text-center {
+  text-align: center; }
+
+.btn-container {
+  margin-top: 6.25em; }
+
+.features-shape {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 75em;
+  max-width: 45%; }
+
+.features__list {
+  margin: 0 -1em; }
+  .features__list li {
+    width: 25%;
+    padding: 0 1em;
+    margin-bottom: 6em; }
+
+.features__item {
+  position: relative;
+  font-size: 1rem; }
+  .features__item::before {
+    content: '';
+    width: 20.375em;
+    height: 24.5625em;
+    background-repeat: no-repeat;
+    background-position: 0 0;
+    background-size: contain;
+    position: absolute;
+    top: 12em;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%); }
+  .features__item--yellow::before {
+    background-image: url("../img/yellow-shape.png"); }
+  .features__item--yellow .features__content h3 {
+    color: var(--yellow); }
+  .features__item--birusa::before {
+    background-image: url("../img/birusa-shape.png"); }
+  .features__item--birusa .features__content h3 {
+    color: var(--birusa); }
+  .features__item--black::before {
+    background-image: url("../img/black-shape.png"); }
+  .features__item--black .features__content h3 {
+    color: var(--black); }
+  .features__item--red::before {
+    background-image: url("../img/red-shape.png"); }
+  .features__item--red .features__content h3 {
+    color: var(--pink); }
+
+.features__img {
+  height: 18.75em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-bottom: 3em;
+  position: relative;
+  z-index: 2; }
+
+.features__content {
+  text-align: center;
+  position: relative;
+  z-index: 2; }
+  .features__content h3 {
+    font-size: 1.3em;
+    text-transform: uppercase;
+    line-height: 1.2;
+    font-weight: 700;
+    margin-bottom: 1em; }
+  .features__content p {
+    font-size: 1rem;
+    line-height: 1.2;
+    width: 80%;
+    margin: 0 auto; }
+
 /*Footer*/
 /*media*/
 @media (max-width: 1500px) {
@@ -625,8 +749,23 @@ a {
     font-size: 1.1vw; }
 
   .menu li {
-    font-size: 1em; } }
+    font-size: 1em; }
+
+  .features__content p {
+    max-width: 70%; }
+
+  .features__img {
+    height: 14em; }
+    .features__img img {
+      max-height: 100%; } }
 /*1366*/
+@media (max-width: 990px) {
+  .features__content p {
+    font-size: 1.1rem; }
+
+  .btn-container .btn {
+    font-size: 14px; } }
+/*990*/
 @media (max-width: 768px) {
   html {
     font-size: 1.3vw; }
@@ -651,8 +790,55 @@ a {
     font-size: 1.7em; }
 
   .service__descr p {
-    font-size: 1.3rem; } }
+    font-size: 1.3rem; }
+
+  .features__list li {
+    width: 50%; }
+
+  .features__item {
+    max-width: 250px;
+    margin: 0 auto; }
+    .features__item::before {
+      height: 100%;
+      width: 100%;
+      top: 10em;
+      background-position: 55% 0; }
+
+  .features__content h3 {
+    font-size: 1.6rem; }
+
+  .features__content p {
+    width: 80%;
+    font-size: 1.2rem; } }
 /*768*/
+@media (max-width: 568px) {
+  .features__list li {
+    width: 100%; }
+
+  .features__item {
+    max-width: 350px; }
+    .features__item::before {
+      display: none; }
+
+  .features__content h3 {
+    font-size: 20px; }
+
+  .features__content p {
+    font-size: 16px;
+    max-width: none;
+    width: 100%; }
+
+  .features__img {
+    height: 150px; }
+
+  .features .mark,
+  .features::before, .features::after {
+    display: none; }
+
+  .features {
+    margin-top: 0;
+    padding: 50px 0; } }
+/*568*/
 @media (max-width: 480px) {
   .header-nav .btn {
     font-size: 13px; }
