--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,4 +1,91 @@
 /*Footer*/ 
 .footer{
-	
+	background-color: #fafafa;
+	padding: 6.25em 0;
 }
+.footer__logo{
+	width: 20%;
+}
+.footer__content{
+	width: 70%;
+}
+.copyright{
+	color: #5d5d5d;
+	font-size: 12px;
+	margin-top: 1.5em;
+	line-height: 1.3;
+}
+.footer__row{
+	justify-content: space-between;
+	&:not(:last-child){
+		margin-bottom: 4em;
+	}
+}
+.footer__row__left{
+	width: 60%;
+}
+.footer__row__right{
+	width: 30%;
+}
+.footer_title{
+	font-size: 1.6875em;
+	font-weight: 500;
+	margin-bottom: .7em;
+}
+.footer__subtitle{
+	font-size: 1rem;
+	line-height: 1.3;
+}
+.callback{
+	display: inline-block;
+	font-size: 1.125rem;
+	color: #000;
+	padding: 1.55em 1.77em 1.55em 3em;
+	background-color: var(--green);
+	border-radius: 30px;
+	position: relative;
+	box-shadow: 0 16px 31px rgba(53, 197, 178, 0.55);
+	&::before{
+		content: '';
+		width: 5em;
+		height: 5em;
+		border-radius: 50%;
+		background:#fff url('../img/oksana-avatar.png') center no-repeat;
+		background-size: contain;
+		position: absolute;
+		top: 50%;
+		left: 0;
+		transform: translate(-50%, -50%);
+	}
+	&:hover{
+		box-shadow: 0 10px 10px rgba(53, 197, 178, 0.75);
+	}
+}
+.address{
+	line-height: 1.5;
+	font-weight: 500;
+	span{
+		display: block;
+		color: #8b8b8b;
+	}
+}
+.footer__phone{
+	width: 45%;
+	line-height: 1.6;
+	a{
+		display: block;
+		font-size: 1.0375em;
+		text-decoration: underline;
+		
+		&:hover{
+			text-decoration: none;
+			color: var(--green);
+		}
+	}
+}
+
+
+
+
+
+
