--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -18,6 +18,9 @@ body{
 	font-family: "Montserrat", sans-serif;
 	background-color: #fff;
 }
+.noscroll{
+	overflow: hidden;
+}
 img{
 	max-width: 100%;
 }
@@ -71,6 +74,7 @@ a{
 }
 
 .btn{
+	display: inline-block;
 	font-size: 1.125em;
 	border-radius: 35px;
 	padding: 1.388em 2.222em;
@@ -145,10 +149,10 @@ a{
 
 
 
-::-webkit-input-placeholder {  }
-::-moz-placeholder          {  } /* Firefox 19+ */
-:-moz-placeholder           {  } /* Firefox 18- */
-:-ms-input-placeholder      {  }
+::-webkit-input-placeholder {font-family: "Montserrat", sans-serif; color: var(--black);font-weight: 500;font-size: 13px;  }
+::-moz-placeholder          {font-family: "Montserrat", sans-serif; color: var(--black);font-weight: 500;font-size: 13px;  } /* Firefox 19+ */
+:-moz-placeholder           {font-family: "Montserrat", sans-serif; color: var(--black);font-weight: 500;font-size: 13px;  } /* Firefox 18- */
+:-ms-input-placeholder      {font-family: "Montserrat", sans-serif; color: var(--black);font-weight: 500;font-size: 13px;  }
 
 // Для стилей автозаполнения полей
 // @-webkit-keyframes autofill {
