--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,5 +7,11 @@
 @import 'top-screen';
 @import 'service';
 @import 'features';
+@import 'photos';
+@import 'reviews';
+@import 'input';
+@import 'form';
+@import 'clients';
+@import 'popup';
 @import 'footer';
 @import 'media';
