--- a/css/style.css
+++ b/css/style.css
@@ -1412,7 +1412,7 @@ span.input {
     font-size: 14px; }
 
   .reviews-slider .slick-arrow {
-    display: none !important; }
+    top: 100%; }
 
   .reviews-slider__text {
     font-size: 1.6rem;
@@ -1537,7 +1537,40 @@ span.input {
 
   .footer__phone {
     margin-bottom: 15px;
-    width: 100%; } }
+    width: 100%; }
+
+  .form .input-wrapper {
+    margin-bottom: 30px; }
+
+  .popup {
+    background: #fff;
+    width: 90%;
+    max-width: 550px;
+    border-radius: 30px;
+    height: auto;
+    max-height: 90vh;
+    overflow-y: auto; }
+
+  .popup__content {
+    width: 90%;
+    padding: 20px 0; }
+
+  .popup-close {
+    left: auto;
+    right: 20px;
+    top: 20px;
+    width: 20px;
+    height: 20px; }
+
+  .popup__top__title__name {
+    font-size: 18px; }
+
+  .popup__top__title__descr {
+    font-size: 15px; }
+
+  .popup__text {
+    font-size: 13px;
+    margin-bottom: 30px; } }
 /*768*/
 @media (max-width: 568px) {
   .features__list li {
@@ -1716,6 +1749,9 @@ span.input {
   .service__descr h3 {
     font-size: 4rem; }
   .service__descr p {
-    font-size: 3rem; } }
+    font-size: 3rem; }
+
+  .popup__top__title__descr {
+    font-size: 12px; } }
 
 /*# sourceMappingURL=style.css.map */
